# llm-council

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements-council.txt  requirements.txt  smithery.yaml
.github/workflows/: test.yml
docs/: llm-council.md  local-models.md
examples/: llm-council.yaml
llm_council/: __init__.py  __main__.py  adapters.py  budget.py  cache.py  cli.py  config.py  context.py  convergence.py  defaults.py  deliberation.py  diff_chunking.py  display.py  doctor.py  env.py  estimate.py  mcp_server.py  model_catalog.py  orchestrator.py  policy.py  setup_wizard.py  stats.py  transcript.py  update_check.py
scripts/: llm-council
tests/: test_adapters_safety.py  test_config_validation.py  test_image_paths.py  test_llm_council.py  test_mcp_budget_safety.py  test_prompt_gemini_safety.py
