[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-council"
version = "0.4.7"
description = "Lightweight read-only multi-agent council for coding projects."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["llm", "agents", "mcp", "cli", "coding"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
]
dependencies = [
  "httpx>=0.27.0",
  "mcp>=1.0.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.1",
]

[project.scripts]
llm-council = "llm_council.cli:main"

[project.urls]
Homepage = "https://github.com/Intellimetrics/llm-council"
Repository = "https://github.com/Intellimetrics/llm-council"
Issues = "https://github.com/Intellimetrics/llm-council/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["llm_council*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
